--- a/about.html
+++ b/about.html
@@ -45,13 +45,12 @@
         <section class="section">
             <div class="container">
                 <h2>About Me</h2>
-                <p>
-                    Welcome to my book blog! I'm Mike, an avid reader and book enthusiast. Here, I share my thoughts on the books 
-                    I read, from contemporary fiction to classic literature.
-                </p>
-                <p>
-                    My goal is to inspire others to discover the joy of reading and to create meaningful discussions around literature.
-                </p>
+                <p>I'm Mike. Mike Books comes from Michaelangelo Bouckaert, my full name - a reminder that we can be multiple things and there is value in shedding complexity to reveal something true.</p>
+                <br>
+                <p>I write to understand reality, synthesize patterns, explain hard concepts simply, and show that roadblocks are usually illusions.</p>
+                <br>
+                <p>Hope it’s useful,</p>
+                <p>- Mike</p>
             </div>
         </section>
     </main>
