--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                 <br>
                 <p>I write to understand reality, synthesize patterns, explain hard concepts simply, and show that roadblocks are usually illusions.</p>
                 <br>
-                <p>Hope it’s useful,</p>
+                <p>Hope it's useful,</p>
                 <p>- Mike</p>
             </div>
         </section>
