--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mike's Books Blog - Blog of Mike Bouckaert, Global Product Director at Postcode Lottery Group">
+    <meta name="keywords" content="books, AI, technology, personal development, blog, health, quantified self, art, music">
+    <meta name="author" content="Mike Books">
+    <meta property="og:title" content="Mike's Books Blog">
+    <meta property="og:description" content="Blog of Mike Bouckaert, Global Product Director at Postcode Lottery Group">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mikebooks.blog">
     <title>Mike's Books Blog</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +49,7 @@
                 <img src="logo/mikebookslogowhite.png" alt="Mike's Books Blog Logo" class="logo logo-dark">
             </a>
         </div>
-        <nav>
+        <nav aria-label="Main navigation">
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -50,8 +57,8 @@
         </nav>
     </header>
 
-    <main>
-        <section class="section">
+    <main role="main">
+        <section class="section" aria-label="Blog Posts">
             <div class="container">
                 <script>
                     fetch('posts.json')
