--- a/about.html
+++ b/about.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mike's Books Blog - Blog of Mike Bouckaert, Global Product Director at Postcode Lottery Group">
+    <meta name="keywords" content="books, AI, technology, personal development, blog, health, quantified self, art, music">
+    <meta name="author" content="Mike Books">
+    <meta property="og:title" content="Mike's Books Blog">
+    <meta property="og:description" content="Blog of Mike Bouckaert, Global Product Director at Postcode Lottery Group">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mikebooks.blog">
     <title>About - Mike's Books Blog</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Mono:wght@400;600&display=swap" rel="stylesheet">
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DKGTEX0SV9"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-DKGTEX0SV9');
+    </script>
 </head>
 <body>
     <header>
