--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Mike's Books Blog. All rights reserved.</p>
+            <p>&copy; 2025 Mike Books' Blog. All views are my own.</p>
         </div>
     </footer>
 
