footer fix en favicon

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="logo/mikebookslogotransparant.png">
     <meta name="description" content="Mike's Books Blog - Blog of Mike Bouckaert, Global Product Director at Postcode Lottery Group">
     <meta name="keywords" content="books, AI, technology, personal development, blog, health, quantified self, art, music">
     <meta name="author" content="Mike Books">
