--- a/about.html
+++ b/about.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="logo/mikebookslogotransparant.png">
-    <meta name="description" content="Mike's Books Blog - Blog of Mike Bouckaert, Global Product Director at Postcode Lottery Group">
+    <meta name="description" content="Mike Books' Blog - Blog of Mike Bouckaert, Global Product Director at Postcode Lottery Group">
     <meta name="keywords" content="books, AI, technology, personal development, blog, health, quantified self, art, music">
     <meta name="author" content="Mike Books">
     <meta property="og:title" content="Mike's Books Blog">
     <meta property="og:description" content="Blog of Mike Bouckaert, Global Product Director at Postcode Lottery Group">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://mikebooks.blog">
-    <title>About - Mike's Books Blog</title>
+    <title>About - Mike Books' Blog</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,8 +46,8 @@
         </div>
         <div class="logo-container">
             <a href="index.html">
-                <img src="logo/mikebookslogotransparant.png" alt="Mike's Books Blog Logo" class="logo logo-light">
-                <img src="logo/mikebookslogowhite.png" alt="Mike's Books Blog Logo" class="logo logo-dark">
+                <img src="logo/mikebookslogotransparant.png" alt="Mike Books' Blog Logo" class="logo logo-light">
+                <img src="logo/mikebookslogowhite.png" alt="Mike Books' Blog Logo" class="logo logo-dark">
             </a>
         </div>
         <nav>
