--- a/about.html
+++ b/about.html
@@ -54,6 +54,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About</a></li>
+                <li><a href="substack.html">Archive</a></li>
             </ul>
         </nav>
     </header>
